--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.0.0",
+        "@iconify/json": "^2.2.225",
         "aos": "^2.3.4",
         "tailwind-hamburgers": "^1.3.5"
     },
@@ -19,6 +20,9 @@
         "@babel/core": "^7.24.7",
         "@babel/preset-env": "^7.24.7",
         "@fullhuman/postcss-purgecss": "^4.0.3",
+        "@iconify-json/gis": "^1.1.15",
+        "@iconify-json/mdi": "^1.1.67",
+        "@iconify/tailwind": "^1.1.1",
         "autoprefixer": "^10.4.0",
         "babel-loader": "^9.1.3",
         "brotli-webpack-plugin": "^1.1.0",
@@ -32,21 +36,25 @@
         "html-loader": "^3.0.0",
         "html-webpack-plugin": "^5.5.0",
         "image-minimizer-webpack-plugin": "^4.0.2",
-        "image-webpack-loader": "^7.0.1",
+        "image-webpack-loader": "^8.1.0",
         "imagemin": "^9.0.0",
         "imagemin-gifsicle": "^7.0.0",
         "imagemin-jpegtran": "^7.0.0",
         "imagemin-mozjpeg": "^10.0.0",
         "imagemin-optipng": "^8.0.0",
         "imagemin-svgo": "^11.0.1",
+        "imagemin-webp": "^8.0.0",
         "mini-css-extract-plugin": "^2.4.3",
         "postcss-loader": "^6.2.1",
+        "sharp": "^0.33.4",
         "tailwindcss": "^3.0.0",
         "terser-webpack-plugin": "^5.3.0",
         "webpack": "^5.64.1",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.7.1",
-        "webpack-merge": "^5.8.0"
+        "webpack-image-resize-loader": "^5.0.0",
+        "webpack-merge": "^5.8.0",
+        "workbox-webpack-plugin": "^7.1.0"
     },
     "browserslist": [
         ">0.2%",
